--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.18.2",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "vue-bus": "^1.0.0"
   },
   "engines": {
     "node": ">= 4.0.0",
